gh pages configs

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="title" content="creativecmb.lk">
+    <meta name="description"
+      content="CMB Marketing is to provide results-oriented advertising, public relations, and marketing designed to meet our client’s objectives by providing strong marketing concepts and excelling at customer service.">
+    <meta name="keywords"
+      content="LED signage Colombo, LED screen Sri Lanka, LED Video screen advertising, advertising, event management, LED, LED screen,  advertising Sri Lanka">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+    <meta name="author" content="creativecmb.lk">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
